--- a/package.json
+++ b/package.json
@@ -4,20 +4,16 @@
     "description": "",
     "main": "server/server.js",
     "scripts": {
-        "start": "node server --ignore client",
-        "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
-        "install": "cd server && npm i && cd ../client && npm i",
-        "seed": "cd server && npm run seed",
-        "build": "cd client && npm run build"
+      "start": "node server/server.js",
+      "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
+      "install": "cd server && npm i && cd ../client && npm i",
+      "build": "cd client && npm run build",
+      "render-build":"npm install && npm run build"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
-        "concurrently": "^5.1.0"
-    },
-    "dependencies": {
-        "@x.render/render-builder": "^1.3.0",
-        "jwt-decode": "^4.0.0"
+      "concurrently": "^5.1.0"
     }
-}
+  }
