--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
-    "name": "collectors_db",
-    "version": "1.0.0",
-    "description": "",
-    "main": "server/server.js",
-    "scripts": {
-      "start": "node server/server.js",
-      "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
+  "name": "collectors_db",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server/server.js",
+  "scripts": {
+      "start": "node server --ignore client",
+      "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
       "install": "cd server && npm i && cd ../client && npm i",
+      "seed": "cd server && npm run seed",
       "build": "cd client && npm run build",
       "render-build":"npm install && npm run build"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "devDependencies": {
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
       "concurrently": "^5.1.0"
-    }
+  },
+  "dependencies": {
+      "jwt-decode": "^4.0.0"
   }
+}
